--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "Simple GraphQL Server",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:server": "nodemon server.js",
+    "json:server": "json-server --watch data.json"
   },
   "author": "Kris Rymer",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.8.0",
+    "graphql": "^14.4.2",
+    "json-server": "^0.15.0",
+    "nodemon": "^1.19.1"
+  }
 }
